--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,5 +1,5 @@
-<div class="equalHWrap eqWrap">
-    <div *ngFor="let item of (afQuestion | async)" class="question-card equalHW eq ">
+<div class="question-container">
+    <div *ngFor="let item of (afQuestion | async)" class="question-card">
          <question-card (onVoted)="onVoted($event)" [voted]="getVoted(item.$key)" [question]="item"></question-card>
     </div>
 
